ci-server.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: teamcity-server
  labels:
    app: teamcity-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teamcity-server
  template:
    metadata:
      labels:
        app: teamcity-server
    spec:
      containers:
      - name: teamcity-server
        image: fstn/teamcity-server-postgres
        ports:
        - containerPort: 8111
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy", "--dir=/cloudsql",
                  "-instances= teamcity-postgres=tcp:5432",
                  "-credential_file=/secrets/cloudsql/proxy-sql-secure.json"]
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
          - name: ssl-certs
            mountPath: /etc/ssl/certs
          - name: cloudsql
            mountPath: /cloudsql            
          - name: data
            mountPath: /data/teamcity_server/datadir
        # [END proxy_container]
      # [START volumes]
      volumes:
        - name: cloudsql-instance-credentials
          secret:
            secretName: cloudsql-instance-credentials
        - name: cloudsql
          emptyDir:
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs
        - name: data
          gcePersistentDisk:
            pdName: teamcity-server-volume
            fsType: ext4
