ci-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: teamcity-server-service
spec:
  type: LoadBalancer
  selector:
    app: teamcity-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8111
