ci-web-service.yaml

kind: Service
apiVersion: v1
metadata:
  name: web-service
spec:
  type: LoadBalancer
  selector:
    app: web-pod
  ports:
  - protocol: TCP
    port: 80
