ci-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: peter-ingress-admin-loadbalancer
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "web-ip"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: web-secret
    hosts:
    - web.co
  backend:
    serviceName: web-service
    servicePort: 80
  rules:
  - host: web.co
    http:
     paths:
     - path: /test-web/*
       backend:
        serviceName: web-service
        servicePort: 8
